# Voxel

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  chunkmanager.cpp  chunkmanager.h  cube.cpp  cube.h  game.cpp  game.h  glad.c  imgui_stuff.cpp  imgui_stuff.h  main.cpp  noise.h  settings.h  shader.cpp  shader.h
src/shaders/: basic_fragment.glsl  basic_vertex.glsl  textured_fragment.glsl  textured_vertex.glsl
